Bug 474038 - Freeze on fetching online quote from fx-rate.net with ad blocker enabled
Summary: Freeze on fetching online quote from fx-rate.net with ad blocker enabled
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: 8.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-01 22:22 UTC by Ralf Habacker
Modified: 2023-09-01 22:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2023-09-01 22:22:33 UTC
SUMMARY
I found a case where an advertisement blocker like pi-hole results into a freeze on fetching an online source.  


STEPS TO REPRODUCE
1. install pi-hole with default settings
2. in the alkimia5 profile add a a source for fx-rate.net and name it test.webkit
3. run alkonlinequote test 

OBSERVED RESULT
The test will not finish

EXPECTED RESULT
The test should finish after a timeout

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: openSUSE 15.4
KDE Frameworks Version: 5.90
Qt Version: 5.15
Comment 1 Ralf Habacker 2023-09-01 22:27:20 UTC
Git commit 93160403e4410a70b4fedc762acf7f77db6d6abb by Ralf Habacker.
Committed on 02/09/2023 at 00:27.
Pushed by habacker into branch '8.1'.

Fix freeze on accessing fx-rate.net when using webkit
FIXED-IN:8.1.2

M  +4    -1    src/alkonlinequote.cpp

https://invent.kde.org/office/alkimia/-/commit/93160403e4410a70b4fedc762acf7f77db6d6abb