Fix freeze on accessing fx-rate.net when using webkit

BUG:474038
FIXED-IN:8.1.2